# Rust_actix_demo

./: .env  Cargo.toml  LICENSE  README.md
migrations/2021-03-09-073436_create_users/: down.sql  up.sql
migrations/2021-03-09-161620_create_orders/: down.sql  up.sql
migrations/2021-03-09-163853_create_order_items/: down.sql  up.sql
other_files/: ecommerce_demo.postman_collection.json
src/: actions.rs  main.rs  models.rs  order_handlers.rs  schema.rs  token_utils.rs  user_handlers.rs
src/orders/: order_actions.rs  order_handlers.rs  order_models.rs
src/users/: token_utils.rs  user_actions.rs  user_handlers.rs  user_models.rs
