[package]
name = "actix-diesel-ecommerce-demo"
version = "1.0.0"
authors = [
  "Nikhil Yeole <nikhilytech@gmail.com>",
]
edition = "2018"

[dependencies]
actix-web = "3"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "chrono", "uuidv07", "numeric"] }
dotenv = "0.15"
env_logger = "0.8"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.10", features = ["serde"] }

[dev-dependencies]
actix-rt = "1"
